# pfpi

./: .gitignore  Cargo.toml
auth/: Cargo.toml  api_doc.yaml
auth/src/: api.rs  main.rs  oauth.rs
comments/: .env  .gitignore  Cargo.toml
comments/migrations/2021-10-27-155126_create_comments/: up.sql
comments/src/: connection.rs  main.rs  models.rs  request.rs  responses.rs  schema.rs
questions/: Cargo.toml  api.yaml  test.db
questions/migrations/2021-10-29-195554_create_questions/: down.sql  up.sql
questions/migrations/2021-11-02-185813_create_answers/: up.sql
questions/src/: db.rs  main.rs  models.rs  schema.rs
src/Comments/: Cargo.toml
