[package]
name = "auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.1"
serde = "1.0.130"
dotenv_codegen = "0.15.0"
anyhow = "1.0.45"
rocket = { version = "0.5.0-rc.1", features = ["json"] }