[package]
name = "comments"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
diesel = { version = "1.4.4", features = ["postgres", "uuid"] }
dotenv = "0.15.0"
 