[package]
name = "questions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
## diesel migration run
[dependencies]
rocket = {version = "0.5.0-rc.1", features=["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"

uuid = { version = "0.7", features = ["serde", "v4"] }